# docs/swagger.yaml
@@ -11,6 +11,40 @@ definitions:
     x-enum-varnames:
     - Local
     - Telegraph
+  ctype.Role:
+    enum:
+    - 1
+    - 2
+    - 3
+    - 4
+    type: integer
+    x-enum-comments:
+      PermissionAdmin: 管理员
+      PermissionDisableUser: 被禁用的用户
+      PermissionUser: 普通用户
+      PermissionVisitor: 游客
+    x-enum-varnames:
+    - PermissionAdmin
+    - PermissionUser
+    - PermissionVisitor
+    - PermissionDisableUser
+  ctype.SignStatus:
+    enum:
+    - 1
+    - 2
+    - 3
+    - 4
+    type: integer
+    x-enum-comments:
+      SignEmail: 邮箱
+      SignGitee: gitee
+      SignGithub: github
+      SignQQ: QQ
+    x-enum-varnames:
+    - SignQQ
+    - SignGitee
+    - SignEmail
+    - SignGithub
   image_ser.FileUploadResponse:
     properties:
       file_name:
@@ -154,6 +188,47 @@ definitions:
           type: integer
         type: array
     type: object
+  models.UserModel:
+    properties:
+      addr:
+        description: 地址
+        type: string
+      avatar_id:
+        description: 头像
+        type: string
+      created_at:
+        description: 创建时间
+        type: string
+      email:
+        description: 邮箱
+        type: string
+      id:
+        description: 主键ID
+        type: integer
+      ip:
+        description: ip地址
+        type: string
+      nick_name:
+        description: 昵称
+        type: string
+      role:
+        allOf:
+        - $ref: '#/definitions/ctype.Role'
+        description: 权限 1 管理员 2 普通用户 3 游客
+      sign_status:
+        allOf:
+        - $ref: '#/definitions/ctype.SignStatus'
+        description: 注册来源
+      tel:
+        description: 电话
+        type: string
+      token:
+        description: 其他平台的唯一ID
+        type: string
+      user_name:
+        description: 用户名
+        type: string
+    type: object
   res.CodeType:
     enum:
     - 0
@@ -200,6 +275,13 @@ definitions:
       list:
         $ref: '#/definitions/models.MenuModel'
     type: object
+  res.ListResponse-models_UserModel:
+    properties:
+      count:
+        type: integer
+      list:
+        $ref: '#/definitions/models.UserModel'
+    type: object
   res.Response:
     properties:
       code:
@@ -213,12 +295,69 @@ definitions:
       name:
         type: string
     type: object
+  user_api.BindEmailRequest:
+    properties:
+      code:
+        type: string
+      email:
+        type: string
+    required:
+    - email
+    type: object
+  user_api.EmailLoginRequest:
+    properties:
+      password:
+        type: string
+      user_name:
+        type: string
+    required:
+    - password
+    - user_name
+    type: object
+  user_api.UserRole:
+    properties:
+      nick_name:
+        type: string
+      role:
+        allOf:
+        - $ref: '#/definitions/ctype.Role'
+        enum:
+        - 1
+        - 2
+        - 3
+        - 4
+      user_id:
+        type: integer
+    required:
+    - role
+    - user_id
+    type: object
 host: 127.0.0.1:8080
 info:
   contact: {}
   title: gvb_service API文档
   version: "1.0"
 paths:
+  /api/email_login:
+    post:
+      description: 邮箱登录
+      parameters:
+      - description: 邮箱登录相关参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/user_api.EmailLoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 邮箱登录
+      tags:
+      - 用户管理
   /api/image_names:
     get:
       description: 查看图片简单信息
@@ -335,6 +474,19 @@ paths:
       summary: 修改图片名称
       tags:
       - 图片管理
+  /api/logout:
+    post:
+      description: 用户退出登录
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 用户退出登录
+      tags:
+      - 用户管理
   /api/menu_detail:
     get:
       description: 菜单细节查询
@@ -484,4 +636,80 @@ paths:
       summary: 修改配置信息
       tags:
       - 配置管理
+  /api/user_bind_email:
+    put:
+      description: 用户绑定邮箱
+      parameters:
+      - description: 邮箱绑定相关参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/user_api.BindEmailRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 用户绑定邮箱
+      tags:
+      - 用户管理
+  /api/user_rule:
+    put:
+      description: 管理员修改用户信息
+      parameters:
+      - description: 用户信息
+        in: body
+        name: data
+        schema:
+          $ref: '#/definitions/user_api.UserRole'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 管理员修改用户信息
+      tags:
+      - 用户管理
+  /api/users:
+    delete:
+      description: 用户注销
+      parameters:
+      - description: 用户id列表
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.RemoveRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 用户注销
+      tags:
+      - 用户管理
+    get:
+      description: 用户列表查看
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/res.ListResponse-models_UserModel'
+              type: object
+      summary: 用户列表查看
+      tags:
+      - 用户管理
 swagger: "2.0"
